Update readme file with step by step details on how to create a docker image.

--- a/DockerApi/Dockerfile
+++ b/DockerApi/Dockerfile
@@ -4,11 +4,9 @@ WORKDIR /app
 COPY . .
 
 RUN dotnet restore DockerApi.csproj
-RUN dotnet publish DockerApi.csproj -c Release -o /app/docker-api
-
-FROM build AS publish
+RUN dotnet publish DockerApi.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS final
-WORKDIR /app
-COPY --from=publish /app/docker-api .
+WORKDIR /api
+COPY --from=build /app/out .
 ENTRYPOINT ["dotnet", "DockerApi.dll"]
