--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,26 @@ stages:
         Dockerfile: '**/Dockerfile' 
         tags: |
           $(tag)
+- stage: Provision
+  displayName: Provision resources
+  dependsOn: Build
+  jobs:
+  - job: Provision
+    displayName: Provision container instance
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables: 
+    - group: TerraformServicePrincipalVars
+    steps:
+    - script: |
+        set -e
+
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      name: 'RunTerraform'
+      displayName: 'Run Terraform'
+      env: 
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)  
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)  
+        ARM_TENANT_ID: $(ARM_TENANT_ID)  
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)  
