--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ stages:
     steps:
     - script: |
         set -e
-
+        cd dockerapi
         terraform init -input=false
         terraform apply -input=false -auto-approve
       name: 'RunTerraform'
